After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 410509 - negative value letter-spacing misinterpreted
negative value letter-spacing misinterpreted
Status: RESOLVED FIXED
Product: librsvg
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: librsvg maintainers
librsvg maintainers
Depends on:
Blocks:
 
 
Reported: 2007-02-21 19:42 UTC by Jakub Steiner
Modified: 2007-02-21 21:38 UTC
See Also:
GNOME target: ---
GNOME version: 2.17/2.18


Attachments
Example SVG (70.65 KB, image/svg+xml)
2007-02-21 19:43 UTC, Jakub Steiner
  Details
Inkscape's rendering (76.01 KB, image/png)
2007-02-21 19:44 UTC, Jakub Steiner
  Details
Implementation of letter spacing property (4.38 KB, patch)
2007-02-21 21:24 UTC, Emmanuel Pacaud
none Details | Review

Description Jakub Steiner 2007-02-21 19:42:49 UTC
Attached is an image that uses negative value of letter-spacing CSS property, making the text '10.3' condensed.

Rsvg renders the image with the letters spread out, making me think it's taking the letter-spacing property as a positive value.
Comment 1 Jakub Steiner 2007-02-21 19:43:19 UTC
Created attachment 83060 [details]
Example SVG
Comment 2 Jakub Steiner 2007-02-21 19:44:42 UTC
Created attachment 83061 [details]
Inkscape's rendering
Comment 3 Emmanuel Pacaud 2007-02-21 20:10:25 UTC
It looks like letter-spacing isn't even supported.
Comment 4 Emmanuel Pacaud 2007-02-21 21:24:19 UTC
Created attachment 83069 [details] [review]
Implementation of letter spacing property
Comment 5 Emmanuel Pacaud 2007-02-21 21:38:59 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.

http://svn.gnome.org/viewcvs/librsvg?rev=1100&view=rev